--- a/src/components/MainPage/main-page.css
+++ b/src/components/MainPage/main-page.css
@@ -1,8 +1,6 @@
+*{ margin: 0px}
 
-body{
-  height: 100vh;
-  background-color: rgb(16, 22, 13);
-}
+
 h1 {
   color: greenyellow;
   text-align: center;
@@ -10,16 +8,24 @@ h1 {
 
 .main-page-body{
   height: 100vh;
+  width: 100vw;
   background-image: url(https://thumbs.gfycat.com/AlarmedInsistentGrayreefshark-poster.jpg);
-  background-size: contain;
+  background-size: cover;
   background-repeat: no-repeat;
 }
 
 .main-page-main{
+  margin-top: 24%;
+  height: 55%;
+  width: 30%;
   float: right;
-  margin-top: 15%;
-  height: 60%;
-  width: 40%;
   background-image: url(https://media.giphy.com/media/fqW7FRJygYRmxkCYJr/giphy.gif);
   background-repeat: no-repeat;
+}
+
+.intro{
+  height: 33vh;
+  width: 35%;
+  padding-top: 13%;
+  float: left;
 }
